# cRS

./: .env.example  .gitignore  NOTICE  README.md  pyproject.toml
src/app/: __init__.py  cRS.py
src/app/core/: __init__.py  data_forms.py  plots.py
src/app/pages/: beta_lambda_helper.py
src/backend/: __init__.py
src/backend/brokers/: __init__.py  base.py  binance.py  bybit.py  mexc.py
src/backend/io/: __init__.py  io.py  kline_manager.py
src/backend/models/: __init__.py
src/backend/models/hmm/: __init__.py  hmm.py
src/backend/models/rs/: __init__.py  rsew.py
src/backend/utils/: __init__.py  utils.py
src/config/: __init__.py  config.py  logging.py
